docs: bug fixed

--- a/22-uso-css-por-etiqueta-selector-class-id.html
+++ b/22-uso-css-por-etiqueta-selector-class-id.html
@@ -58,7 +58,7 @@
                 <div>
                     <h2>Anatomía del codigo CSS</h2>
                     <figure id="figure-css-anatomy">
-                        <img id="img-css-anatomy" src="/images/majo-apuntes1.jpg" alt="">
+                        <img id="img-css-anatomy" src="./images/majo-apuntes1.jpg" alt="">
                         <figcaption id="fig-css-anatomy">Fuente: <a href="https://drive.google.com/file/d/1WqIw3tPS6gNhEnma7iHl-PEfByKSIYGK/view" target="_blank">"Los apuntes de Majo"</a></figcaption>
                     </figure>
                 </div>
@@ -131,6 +131,13 @@
                         <img
                         class="cropped2" src="https://tinyurl.com/k764en3w"> 
                         </div>
+                </div>
+            </section>
+        </article>
+        <article>
+            <section>
+                <div>
+                    <p>Cuando se quiera incrustar una ruta <b>estatica interna</b>, ya sea de una imagen, video, página o cualquier tipo de archivo, la ruta se tiene que declarar primero con un punto (<b>.</b>), seguido de un slash (<b>/</b>), (<b>./ruta</b>); así se está informando al sistema, que la ruta declarada inicia desde el directorio actual.<br/>Esta acción hace parte de las buenas prácticas, de lo contrario se tendrá problemas al subir el proyecto a un repositorio o al hacer un deploy.</p> 
                 </div>
             </section>
         </article>
