--- a/22-uso-css-por-etiqueta-selector-class-id.html
+++ b/22-uso-css-por-etiqueta-selector-class-id.html
@@ -35,7 +35,7 @@
                                 </span>
                             </p>
                             <p id="parrafo-li-3">
-                                Evitar esta práctica, porque por error podremos reescribir todos los estilos almacenados en nuestro archivo CSS que está dentro de la etiqueta <i>< link /></i>.
+                                Evitar esta práctica, porque por error podremos reescribir todos los estilos almacenados en nuestro archivo CSS que está dentro de la etiqueta <i>< link /></i>, ya que está en un nivel superior en la jerarquía de importancia y especificidad.
                             </p>
                         </dd>
                     </ol>
@@ -165,7 +165,7 @@
         </article>
     </main>
     <footer>
-        <p>Ruta de estudios: Platzi.com & losapuntesdemajo.vercel.app<br/>Fuentes: <a href="https://platzi.com/clases/2008-html-css/31073-como-utilizamos-css-por-etiqueta-selector-class-y-/">Platzi.com</a> - Stackoverflow.com: <a href="https://es.stackoverflow.com/questions/159353/funciona-realmente-especificar-un-margin-y-un-padding-a-0-inicialmente" target="_blank">1</a>, <a href="https://stackoverflow.com/questions/1714096/is-the-css-star-selector-considered-harmful-and-why" target="_blank">2</a>, <a href="https://es.stackoverflow.com/questions/86603/es-recomendable-establecer-el-margin-y-el-padding-a-0-en-el-documento-css-de-mi" target="_blank">3</a> - <a href="https://drive.google.com/file/d/1WqIw3tPS6gNhEnma7iHl-PEfByKSIYGK/view" target="_blank">losapuntesdemajo.vercel.app</a> - developer.mozilla.org: (<a href="https://developer.mozilla.org/es/docs/Web/CSS/border-style">border-style</a>) (<a href="https://developer.mozilla.org/en-US/docs/Web/CSS/border-radius">border-radius</a>) - <a href="https://www.delftstack.com/es/howto/html/html-crop-image/">delftstack.com</a> - <a href="https://lenguajecss.com/css/modelo-de-cajas/propiedades-logicas-css/">lenguajecss.com</a></p>
+        <p>Ruta de estudios: Platzi.com & losapuntesdemajo.vercel.app<br/>Fuentes: <a href="https://platzi.com/clases/2008-html-css/31073-como-utilizamos-css-por-etiqueta-selector-class-y-/" target="_blank">Platzi.com</a> - Stackoverflow.com: <a href="https://es.stackoverflow.com/questions/159353/funciona-realmente-especificar-un-margin-y-un-padding-a-0-inicialmente" target="_blank">1</a>, <a href="https://stackoverflow.com/questions/1714096/is-the-css-star-selector-considered-harmful-and-why" target="_blank">2</a>, <a href="https://es.stackoverflow.com/questions/86603/es-recomendable-establecer-el-margin-y-el-padding-a-0-en-el-documento-css-de-mi" target="_blank">3</a> - <a href="https://drive.google.com/file/d/1WqIw3tPS6gNhEnma7iHl-PEfByKSIYGK/view" target="_blank">losapuntesdemajo.vercel.app</a> - developer.mozilla.org: (<a href="https://developer.mozilla.org/es/docs/Web/CSS/border-style" target="_blank">border-style</a>) (<a href="https://developer.mozilla.org/en-US/docs/Web/CSS/border-radius" target="_blank">border-radius</a>) - <a href="https://www.delftstack.com/es/howto/html/html-crop-image/" target="_blank">delftstack.com</a> - <a href="https://lenguajecss.com/css/modelo-de-cajas/propiedades-logicas-css/" target="_blank">lenguajecss.com</a></p>
     </footer>
 </body>
 </html>
