--- a/23-pseudo-clases-y-pseudo-elementos.html
+++ b/23-pseudo-clases-y-pseudo-elementos.html
@@ -19,7 +19,7 @@
                     <p class="p-main-def" id="p-def-pc">Especifica un estado especial del elemento seleccionado, para que una vez activado recién se aplique el estilo que hemos declarado.<br/>Por ejemplo: se aplicará un estilo, solo cuando el usuario haga "hover" sobre el elemento seleccionado. Es como decir, "si realiza esta acción, se aplicará este estilo".</p>
                     <p id="p-def-pc2">Todas las clases, sin excepción, son una palabra precedida por dos puntos (:).</p>
                     <dl>
-                        <dt>Es posible combinar pseudo-classes juntas.<br/>Por ejemplo:</dt>
+                        <dt id="dt-pc">Es posible combinar más de dos <span id="span-pc-dt">pseudo-classes</span> en un solo selector.<br/>Por ejemplo:</dt>
                         <dd>a<span id="span-pc-link">:link</span><span id="span-pc-hover">:hover</span> {color: red;}</dd>
                     </dl>
                     <input type="button" value="aaaaa">
