docs: added new div with BEM

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <div class="bloquedef">
                             <dl class="bloquedef__list">
                                 <dt class="bloquedef__title">Elementos</dt>
-                                <dd class="bloquedef__def">Son cualquier elemento que conforma un bloque, y que no cumple el rol de bloque dentro del bloque padre.</dd>
+                                <dd class="bloquedef__def">Son cualquier tipo de elemento que conforma un bloque, y que no cumple el rol de bloque dentro del bloque padre.</dd>
                             </dl>
                         </div>
                         <div class="bloquedef">
@@ -116,14 +116,20 @@
                                 <li class="bloquedef__extracto-2">Puede haber un bloque dentro de otro bloque. <span class="bloquedef__texto-resaltado"><b>Importante:</b> Solo debe servir para darle los estilos básicos a nuestro componente.</span></li>
                                 <li class="bloquedef__extracto-2">Se puede agregar cualquier cantidad de bloques, dentro de un contenedor.</li>
                             </ul>
-                            <p></p>
-                            <p></p>
                         </div>
                         <div class="bloquedef">
                             <dl class="bloquedef__list">
                                 <dt class="bloquedef__title">Modificadores</dt>
                                 <dd class="bloquedef__def">Modifican los bloques para agregarle un estilo único. <span class="bloquedef__texto-resaltado">Sirven para agregar estilos que añaden ciertos cambios que ayudan a diferenciar al modificador de los otros bloques y modificadores.</span> Son classes que derivan de los bloques que <span class="bloquedef__texto-resaltado bloquedef--bold">funcionan como un <b>id</b></span>.<br/>La sintaxis de un modificador es: El nombre del bloque, doble guión (--) y el nombre del modificador; "<b>nombreDelBloque--nombre-DelModificador</b>".</dd>
                             </dl>
+                        </div>
+                        <div class="bloquedef__images">
+                            <div class="images">
+                                <figure class="images__bloque">
+                                    <img class="images__img" src="./images/bem.jpg" alt="Ejemplo de BEM">
+                                    <figcaption class="images__descripcion">Este es un modelo de BEM.<br/>En esta imagen podemos observar dos botones similares, ambos vendrían siendo de un solo bloque, por su tamaño y tipo de letra, y sus modificadores vendrían siendo el color el grosor de la letra y los íconos, ya que estos son características propias de cada botón realizado.</figcaption>
+                                </figure>
+                            </div>
                         </div>
                     </div>
                 </div>
